Update move_base params

--- a/ros/src/sd_navigation/config/r2_move_base.yaml
+++ b/ros/src/sd_navigation/config/r2_move_base.yaml
@@ -9,7 +9,7 @@ recovery_behaviors: [
   { name: rotate_recovery, type: rotate_recovery/RotateRecovery }]
 
 # The rate in Hz at which to run the control loop and send velocity commands to the base
-controller_frequency: 5.0
+controller_frequency: 2.0
 
 # How long the planner / controller will wait in seconds in an attempt to find a 
 # valid plan before space-clearing operations are performed
@@ -43,7 +43,7 @@ GlobalPlanner:
   # Use the quadratic approximation of the potential
   # and then optimize path using a gradient descent method
   # This part does subnode path optimization 
-  use_quadratic: false
+  use_quadratic: true
   use_grid_path: false
 
   # Specifies whether or not to visualize the potential 
@@ -67,23 +67,41 @@ TrajectoryPlannerROS:
   acc_lim_x: 0.5
   acc_lim_y: 0.5
   acc_lim_theta: 2
-  max_vel_x: 0.2
-  max_vel_theta: 1
+  max_vel_x: 0.15
+  min_vel_theta: -1.0
+  max_vel_theta: 1.0
 
   # The minimum velocities are useful to guarantee that
   #  velocity commands sent to a mobile base are high enough 
   # to allow the base to overcome friction
   min_vel_x: 0.05
-  min_vel_theta: 0.05
   min_in_place_vel_theta: 0.2
+
+  # The amount of time to forward-simulate trajectories in seconds
+  sim_time: 2.0
+
+  # The step size, in meters, to take between points on a given trajectory 
+  sim_granularity: 0.05
+
+  # The step size, in radians, to take between angular samples 
+  # on a given trajectory. - New in navigation 1.3.1 
+  angular_sim_granularity: 0.05
+
+  # The number of samples to use when exploring the x velocity space 
+  # Default : 3
+  vx_samples: 3
+
+  # The number of samples to use when exploring the theta velocity space
+  # Default : 20 
+  vtheta_samples: 10
 
   # Velocity used when the robot attempt to escape (closed path)
   # Must be negative
   escape_vel: -0.1
 
   # Goal Tolerance Parameters
-  yaw_goal_tolerance: 0.09  # 5°
-  xy_goal_tolerance: 0.05   # m
+  yaw_goal_tolerance: 0.18  # 10°
+  xy_goal_tolerance: 0.1   # m
 
   # When robot has reached xy goal, then ignore it for 
   # the last rotation part of the trajectory
@@ -97,14 +115,14 @@ TrajectoryPlannerROS:
 
   # The weighting for how much the controller should stay 
   # close to the path it was given (0 - 5) 
-  pdist_scale: 0.2
+  pdist_scale: 4.5
   
   # The weighting for how much the controller should 
   # attempt to reach its local goal (0 - 5)
   gdist_scale: 0.2
 
   # The weighting for how much the controller should attempt to avoid obstacles
-  occdist_scale: 0.05
+  occdist_scale: 2.0
 
   # How far to look ahead in meters when scoring different in-place-rotation trajectories
   heading_lookahead: 1.0
