--- a/ros/src/sd_main/config/r2_log_level.conf
+++ b/ros/src/sd_main/config/r2_log_level.conf
@@ -1,5 +1,5 @@
 # Set the default ros output to warning and higher
-log4j.logger.ros=INFO
+log4j.logger.ros=WARN
 
 # Test mode
-log4j.logger.ros.sd_behavior=DEBUG
+log4j.logger.ros.sd_behavior=INFO
