Back to default log level

--- a/ros/src/sd_main/config/r2_log_level.conf
+++ b/ros/src/sd_main/config/r2_log_level.conf
@@ -1,5 +1,5 @@
 # Set the default ros output to warning and higher
 log4j.logger.ros=WARN
 
-# Test mode
-log4j.logger.ros.sd_behavior=INFO
+# View LIDAR speed
+#log4j.logger.ros.xv_11_lidar_raspberry=DEBUG
