Add a Laser detector

--- a/ros/src/sd_sensor/config/r2_sensor_config.yaml
+++ b/ros/src/sd_sensor/config/r2_sensor_config.yaml
@@ -1,11 +1,37 @@
 r2_laser_scan_filter:
-    scan_filter_chain:
-    - name: bounds_repeat
-      type: sd_sensor/LaserScanAngularBoundsListFilter
-      params:
-        angles: []
-        angles2: []
+  scan_filter_chain:
+  - name: bounds_repeat
+    type: sd_sensor/LaserScanAngularBoundsListFilter
+    params:
+      angles: []
+      angles2: []
 
+r2_laser_pattern_detector:
+
+  detector_frequency: 5.0
+
+  # ? = any, 0 = below thresbold, 1 = greater than threshold, X = obstructed
+  # Threshold in meter
+
+  # Degree              0       21      45      69     90     111     135  ...
+  isTirette_pattern:   "?????XXX????????????????????????????????????????????????????????????????????????????????????????????????????????????????"
+  isTirette_threshold: 0.1
+  
+  # Degree              0       21      45      69     90     111     135  ...
+  isLeftFree_pattern:  "???????????????????????????????????????????????????????11???????????????????????????????????????????????????????????????"
+  isLeftFree_threshold: 0.3
+
+  # Degree              0       21      45      69     90     111     135  ...
+  isRightFree_pattern: "???????????????????????????????????????????????????????????????????????11???????????????????????????????????????????????"
+  isRightFree_threshold: 0.3
+
+  # Degree              0       21      45      69     90     111     135  ...
+  isFrontFree_pattern: "??????????????????????????????????????????????????????????????11????????????????????????????????????????????????????????"
+  isFrontFree_threshold: 0.3
+ 
+  # Degree              0       21      45      69     90     111     135  ...
+  isBackFree_pattern:  "????11??????????????????????????????????????????????????????????????????????????????????????????????????????????????????"
+  isBackFree_threshold: 0.3
 
 mpu6050:
   frame: 'r2/imu_link'
