Add missing dependencies

--- a/ros/src/sd_behavior/package.xml
+++ b/ros/src/sd_behavior/package.xml
@@ -23,6 +23,8 @@
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>actionlib</depend>
+  <depend>sd_sensor_msgs</depend>
+  <depend>sd_led_matrix</depend>
 </package>
 
 
