--- a/ros/src/sd_behavior/CMakeLists.txt
+++ b/ros/src/sd_behavior/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   behaviortree_cpp_v3
   actionlib
   tf
+  sd_sensor_msgs
 )
 
 catkin_package(
@@ -31,39 +32,47 @@ include_directories(
 )
 
 add_executable(${PROJECT_NAME} src/main.cpp)
+add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 add_library(laser_nodes STATIC src/laser_nodes.cpp)
+add_dependencies(laser_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(laser_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(${PROJECT_NAME} laser_nodes)
 
 add_library(gripper_nodes STATIC src/gripper_nodes.cpp)
+add_dependencies(gripper_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(gripper_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(${PROJECT_NAME} gripper_nodes)
 
 add_library(move_nodes STATIC src/move_nodes.cpp)
-target_link_libraries(move_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 add_dependencies(move_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(move_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(${PROJECT_NAME} move_nodes)
 
 add_library(score_nodes STATIC src/score_nodes.cpp)
+add_dependencies(score_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(score_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(${PROJECT_NAME} score_nodes)
 
 add_library(sensors_nodes STATIC src/sensors_nodes.cpp)
+add_dependencies(sensors_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(sensors_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(${PROJECT_NAME} sensors_nodes)
 
 add_library(status_nodes STATIC src/status_nodes.cpp)
+add_dependencies(status_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(status_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(${PROJECT_NAME} status_nodes)
 
 add_library(timer_nodes STATIC src/timer_nodes.cpp)
+add_dependencies(timer_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(timer_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(${PROJECT_NAME} timer_nodes)
 
 add_library(eye_nodes STATIC src/eye_nodes.cpp)
+add_dependencies(eye_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(eye_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(${PROJECT_NAME} eye_nodes)
 
