Remove rosserial debug to avoid disk overusage

--- a/ros/src/sd_main/config/r1_log_level.conf
+++ b/ros/src/sd_main/config/r1_log_level.conf
@@ -5,4 +5,4 @@ log4j.logger.ros=WARN
 # log4j.logger.ros.sd_behavior=INFO
 
 
-log4j.logger.ros.rosserial_server=DEBUG
+#log4j.logger.ros.rosserial_server=DEBUG
