Fix laser pattern detector

--- a/ros/src/sd_sensor/config/r2_sensor_config.yaml
+++ b/ros/src/sd_sensor/config/r2_sensor_config.yaml
@@ -7,30 +7,22 @@ r2_laser_scan_filter:
       angles2: []
 
 r2_laser_pattern_detector:
-
   detector_frequency: 5.0
 
-  # ? = any, 0 = below thresbold, 1 = greater than threshold, X = obstructed
-  # Threshold in meter
-
-  # Degree              0       21      45      69     90     111     135  ...
-  isTirette_pattern:   "?????XXX????????????????????????????????????????????????????????????????????????????????????????????????????????????????"
-  isTirette_threshold: 0.1
+  # ? = any, 0 = below threshold, 1 = greater than threshold, X = obstructed
+  # 
+  # Degree              0         60        120       180        240       300       
+  isTirette_pattern:   "XXX??????????????????????????????????????????????????????XXX"
+  isBackFree_pattern:  "??111???????????????????????????????????????????????????????"
+  isLeftFree_pattern:  "??????????????????????????11????????????????????????????????"
+  isFrontFree_pattern: "??????????????????????????????11????????????????????????????"
+  isRightFree_pattern: "??????????????????????????????????11????????????????????????"
   
-  # Degree              0       21      45      69     90     111     135  ...
-  isLeftFree_pattern:  "???????????????????????????????????????????????????????11???????????????????????????????????????????????????????????????"
+  # Distance threshold in meters
+  isTirette_threshold: 0.1
   isLeftFree_threshold: 0.3
-
-  # Degree              0       21      45      69     90     111     135  ...
-  isRightFree_pattern: "???????????????????????????????????????????????????????????????????????11???????????????????????????????????????????????"
-  isRightFree_threshold: 0.3
-
-  # Degree              0       21      45      69     90     111     135  ...
-  isFrontFree_pattern: "??????????????????????????????????????????????????????????????11????????????????????????????????????????????????????????"
   isFrontFree_threshold: 0.3
- 
-  # Degree              0       21      45      69     90     111     135  ...
-  isBackFree_pattern:  "????11??????????????????????????????????????????????????????????????????????????????????????????????????????????????????"
+  isRightFree_threshold: 0.3
   isBackFree_threshold: 0.3
 
 mpu6050:
