--- a/ros/src/sd_control/config/r2_control.yaml
+++ b/ros/src/sd_control/config/r2_control.yaml
@@ -12,8 +12,9 @@ mobile_base_controller:
   enable_odom_tf: false            # TF is publihed by the ukf filter
   open_loop: false
   
-  pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
-  twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+  #                           X       Y       yaw     X'       Y'         yaw'
+  pose_covariance_diagonal : [0.0001, 0.0001, 0.02,   0.001,   0.001,     0.1 ]
+  twist_covariance_diagonal: [0.0001, 0.0001, 0.02,   0.001,   0.001,     0.1 ]
 
   # Wheel separation and diameter. These are both optional.
   # diff_drive_controller will attempt to read either one or both from the
