--- a/ros/src/sd_localization/CMakeLists.txt
+++ b/ros/src/sd_localization/CMakeLists.txt
@@ -39,15 +39,17 @@ catkin_package(
 include_directories( ${catkin_INCLUDE_DIRS} )
 
 add_executable( ${PROJECT_NAME}_snap_map src/sd_localization_snap_map.cpp )
-
 target_link_libraries( ${PROJECT_NAME}_snap_map ${catkin_LIBRARIES} )
-
 add_dependencies(${PROJECT_NAME}_snap_map 
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS}
 )
 
-install(TARGETS ${PROJECT_NAME}_snap_map
+add_executable( odom_to_map src/odom_to_map.cpp )
+target_link_libraries( odom_to_map ${catkin_LIBRARIES} )
+add_dependencies(odom_to_map ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+
+install(TARGETS ${PROJECT_NAME}_snap_map odom_to_map
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
