Fix missing "s" at node

--- a/ros/src/sd_behavior/config/r1_behavior.yaml
+++ b/ros/src/sd_behavior/config/r1_behavior.yaml
@@ -11,7 +11,7 @@ odom_frame_id: r1/odom
 map_frame_id: map
 
 bt_modules:
-  - GripperNode
+  - GripperNodes
   - MoveNodes
   - ScoreNodes
   - SensorsNodes
