--- a/ros/src/sd_sensor/config/r2_sensor_config.yaml
+++ b/ros/src/sd_sensor/config/r2_sensor_config.yaml
@@ -27,5 +27,6 @@ r2_laser_pattern_detector:
 
 mpu6050:
   frame: 'r2/imu_link'
+  frequency: 50
   update_bias_at_startup: true
   update_bias_at_startup_count: 100
