--- a/ros/src/sd_behavior/package.xml
+++ b/ros/src/sd_behavior/package.xml
@@ -12,6 +12,9 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>rosbag_storage</build_depend>
+  <build_depend>topic_tools</build_depend>
+  <build_depend>boost</build_depend>
 
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -25,6 +28,7 @@
   <depend>actionlib</depend>
   <depend>sd_sensor_msgs</depend>
   <depend>sd_led_matrix</depend>
+  <depend>rosbag</depend>
 </package>
 
 
