Ajout des éléments pour l'homologation

--- a/ros/src/sd_behavior/config/r1_behavior.yaml
+++ b/ros/src/sd_behavior/config/r1_behavior.yaml
@@ -14,11 +14,13 @@ behavior_tree:
 
   modules:
     - GripperNodes
+    - LaserNodes
     - MoveNodes
     - ScoreNodes
     - SensorsNodes
     - StatusNodes
     - TimerNodes
+    - RosbagNodes
 
   initialpose_topic: /r1/initialpose
   move_base_topic: /r1/move_base
