--- a/ros/src/sd_sensor/config/r1_sensor_config.yaml
+++ b/ros/src/sd_sensor/config/r1_sensor_config.yaml
@@ -22,6 +22,24 @@ r1_laser_scan_filter:
       angles: [[-2.84, -1.40], [-0.70, 0.70], [1.40, 2.84]]
       angles2: [[-0.70, 0.70], [1.40, 2.84]]
 
+r1_laser_pattern_detector:
+  detector_frequency: 5.0
+  # ? = any, 0 = below threshold, 1 = greater than threshold, X = obstructed
+  # 
+  # Degree                    0         60        120       180        240       300      
+  isTirette_pattern:   "XXX??????????????????????????????????????????????????????XXX"
+  isBackFree_pattern:  "????????????????????????????????????????????????????????????"
+  isLeftFree_pattern:    "???????????????????????111111111????????????????????????????"
+  isFrontFree_pattern:  "?????111111111??????????????????????????????????????????????"
+  isRightFree_pattern:  "????????????????????????????????????????????111111111???????"
+
+  # Distance threshold in meters
+  isTirette_threshold: 0.1
+  isLeftFree_threshold: 0.6
+  isFrontFree_threshold: 0.3
+  isRightFree_threshold: 0.6
+  isBackFree_threshold: 0.3
+
 mpu6050:
   frame: 'r1/imu_link'
   bias_gx: -0.0916577642343
