--- a/ros/src/sd_navigation/config/r1_move_base.yaml
+++ b/ros/src/sd_navigation/config/r1_move_base.yaml
@@ -3,17 +3,18 @@
 recovery_behaviors: [
   # Revert to the static map outside of a given radius away from 
   # the robot (conservative_reset_dist : 3 meters by default)
-  { name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery }, 
+  { name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery } 
   # This package provides a recovery behavior for the navigation stack that attempts
   # to clear space by performing a 360 degree rotation of the robot.
-  { name: rotate_recovery, type: rotate_recovery/RotateRecovery }]
+  #,{ name: rotate_recovery, type: rotate_recovery/RotateRecovery }
+  ]
 
 # The rate in Hz at which to run the control loop and send velocity commands to the base
 controller_frequency: 2.0
 
 # How long the planner / controller will wait in seconds in an attempt to find a 
 # valid plan before space-clearing operations are performed
-planner_patience: 2.0
+planner_patience: 5.0
 controller_patience: 4.0
 
 # How long in seconds to allow for oscillation before executing recovery behaviors
@@ -62,19 +63,21 @@ base_local_planner: "base_local_planner/TrajectoryPlannerROS"
 TrajectoryPlannerROS:
   # Robot Configuration Parameters (same values as in sd_control)
   holonomic_robot: true
-  
+  dwa: true
+
   acc_lim_x: 2.0
   acc_lim_y: 2.0
-  acc_lim_theta: 9.0
+  acc_lim_theta: 6.0
   max_vel_x: 1.0
-  min_vel_theta: -6.0
-  max_vel_theta: 6.0
-  y_vels: [-1.0, -0.1, 0.1, 1.0] # [-max_vel_y -min_vel_y min_vel_y max_vel_y]
+  min_vel_theta: -3.0
+  max_vel_theta: 3.0
+  # List of possible y velocities
+  y_vels: [-2.0, -1.0, -0.8, -0.5, -0.3, -0.1, 0.1, 0.3, 0.5, 0.8, 1.0, 2.0]
 
   # The minimum velocities are useful to guarantee that
   #  velocity commands sent to a mobile base are high enough 
   # to allow the base to overcome friction
-  min_vel_x: 0.2
+  min_vel_x: 0.4
   min_in_place_vel_theta: 0.2
 
   # The amount of time to forward-simulate trajectories in seconds
